WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113977
Page content missing when flipping from an empty layer to a tiled layer
https://bugs.webkit.org/show_bug.cgi?id=113977
Summary
Page content missing when flipping from an empty layer to a tiled layer
Simon Fraser (smfr)
Reported
2013-04-04 16:43:38 PDT
Page content missing when flipping from an empty layer to a tiled layer
Attachments
Patch
(7.79 KB, patch)
2013-04-04 16:47 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-04-04 16:47:06 PDT
Created
attachment 196554
[details]
Patch
Tim Horton
Comment 2
2013-04-04 16:49:14 PDT
Comment on
attachment 196554
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=196554&action=review
> Source/WebCore/ChangeLog:12 > + swapFromOrToTiledLaye() sets some dirty flags, but for some properties which have
Laye.
Simon Fraser (smfr)
Comment 3
2013-04-04 16:56:33 PDT
https://trac.webkit.org/r147682
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug